# VoxelEngineExperiments

./: .gitignore  EXPERIENCE.md  VoxelEngineExperiments.slnx
.plastic/: plastic.changes  plastic.selector  plastic.wktree  plastic.workspace
Assets/AddressableAssetsData/: AddressableAssetGroupSortSettings.asset  AddressableAssetSettings.asset  DefaultObject.asset
Assets/AddressableAssetsData/AssetGroupTemplates/: Packed Assets.asset
Assets/AddressableAssetsData/AssetGroups/: Default Local Group.asset
Assets/AddressableAssetsData/AssetGroups/Schemas/: Default Local Group_BundledAssetGroupSchema.asset  Default Local Group_ContentUpdateGroupSchema.asset
Assets/Art/: Capsule.asset  SphereVoxelModel.asset  palette_dragon.asset  voxel_dragon.asset  voxel_octant_sphere.asset
Assets/Scenes/: Experiment.unity  PrimaryRay.unity
Assets/VoxelEngine/: README.md
Assets/VoxelEngine/Data/: README.md
Assets/VoxelEngine/Data/Voxel/: README.md  VoxelModel.cs  VoxelModelAsset.cs  VoxelPalette.cs  VoxelPaletteAsset.cs  VoxelVolume.cs
Assets/VoxelEngine/Data/VoxelWorldHierarchy/: VoxelWorldHierarchy.cs
Assets/VoxelEngine/Debug/: CameraPlanarMovementController.cs
Assets/VoxelEngine/Importer/Editor/: VoxImportScene.cs  VoxImportWindow.cs  VoxImporter.cs  VoxSceneParser.cs  VoxelChunkAabbOptimizer.cs
Assets/VoxelEngine/LifeCycle/: README.md
Assets/VoxelEngine/LifeCycle/Example/: SimpleVoxelDrawer.cs
Assets/VoxelEngine/LifeCycle/Manager/: README.md  VoxelModelManager.cs  VoxelPaletteManager.cs  VoxelRtasManager.cs
Assets/VoxelEngine/Render/: README.md
Assets/VoxelEngine/Render/Cores/: GbufferCore.cs  README.md  RtaoCore.cs
Assets/VoxelEngine/Render/Debug/: VoxelChunkDebugger.cs
Assets/VoxelEngine/Render/NRD/: README.md
Assets/VoxelEngine/Render/RenderBackend/: README.md  VoxelEngineRenderBackend.cs  VoxelEngineRenderInstanceHandle.cs
Assets/VoxelEngine/Render/RenderPipeline/: README.md  VoxelEngineRenderPipeline.cs  VoxelEngineRenderPipelineAsset.asset  VoxelEngineRenderPipelineAsset.cs
Assets/VoxelEngine/Render/Shaders/: README.md  VoxelGbuffer.raytrace  VoxelGbufferPreview.shader  VoxelProceduralShader.mat  VoxelProceduralShader.shader  VoxelProceduralShaderShared.hlsl  VoxelRtao.raytrace
Assets/VoxelEngine/Tools/Editor/: ChunkCubeVoxelModelAssetWindow.cs  DualAabbChunkVoxelModelAssetWindow.cs  MeshToVoxelModelAssetBuilder.cs  MeshToVoxelModelAssetWindow.cs  RandomVoxelPaletteAssetWindow.cs  SphereVoxelModelAssetWindow.cs  VoxelAssetEditors.cs  VoxelWorldHierarchyChunkAabbAnalyzerWindow.cs
Assets/VoxelExperiments/Editor/: VoxelExperiments.Editor.asmdef
Assets/VoxelExperiments/Runtime/: VoxelExperiments.Runtime.asmdef
Assets/VoxelExperiments/Runtime/Tools/: VoxelLayoutToggleController.cs
Assets/VoxelRT/Editor/: VoxelRT.Editor.asmdef
Assets/VoxelRT/Runtime/: VoxelRT.Runtime.asmdef
Plugins/NRDPlugin/: CMakeLists.txt  README.md
Plugins/NRDPlugin/include/: NrdPluginAPI.h
Plugins/NRDPlugin/src/: NrdPlugin.cpp  README.md
Plugins/x86_64/Release/: NRD.lib  NRI.lib
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+323 files in other folders)
